# A2UI

./: 404.html  CNAME  README.md  index.html  llms-full.txt  llms.txt  sitemap.xml
a2a_agents/python/adk/samples/contact_lookup/: __main__.py  a2ui_examples.py  a2ui_schema.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  tools.py
a2a_agents/python/adk/samples/restaurant_finder/: prompt_builder.py
a2a_samples/: pyproject.toml
a2a_samples/a2ui_time_off_agent/: README.md  __main__.py  a2ui_examples.py  a2ui_schema.py  a2ui_toolset.py  agent.py  agent_executor.py  part_converter.py  pyproject.toml  tools.py
a2ui_protocol/: index.html  index.md
proposals/v0_8/: index.html
renderers/lit/: package-lock.json
samples/agent/adk/: pyproject.toml
samples/agent/adk/contact_multiple_surfaces/: README.md  __main__.py  a2ui_examples.py  agent.py  agent_executor.py  contact_data.json  prompt_builder.py  pyproject.toml
samples/agent/adk/quiz_tutor/: README.md  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml  quiz_generator.py
samples/client/angular/: README.md  angular.json  tsconfig.json
samples/client/lit/: package.json
samples/client/lit/contact/: contact.ts
samples/client/lit/shell/: README.md  THEMING.md  app.ts  client.ts  index.html  package.json
search/: search_index.json
specification/json/: catalog_description_schema.json  client_event_schema.json  protocol_schema.json  standard_catalog_description.json  standard_catalog_description_llm.json
web/: README.md  package.json
web/lib/src/0.8/ui/: row.ts  tabs.ts
(+13 files in other folders)
