# /Users/mandard/work/agents/a2ui/a2a_samples/pyproject.toml
[project]
name = "a2a-samples"
version = "0.1.0"
description = "A top-level project to manage A2A samples."
dependencies = []

[tool.uv.workspace]
members = [
    "a2ui_extension",
    "a2ui_restaurant_finder",
    "a2ui_contact_lookup",
    "a2ui_time_off_agent"
]

[tool.uv.sources]
a2ui-ext = { path = "a2ui_extension", editable = true }
# The key must match the package name
a2ui-restaurant-finder = { path = "a2ui_restaurant_finder", editable = true } # <-- Renamed here